<resources>
    <string name="app_name">Atm-dial-pad</string>
    <string name="action_settings">Settings</string>
    <string name="custom_dial_pad_number_one">1</string>
    <string name="custom_dial_pad_number_two">2</string>
    <string name="custom_dial_pad_number_three">3</string>
    <string name="custom_dial_pad_number_four">4</string>
    <string name="custom_dial_pad_number_five">5</string>
    <string name="custom_dial_pad_number_six">6</string>
    <string name="custom_dial_pad_number_seven">7</string>
    <string name="custom_dial_pad_number_eight">8</string>
    <string name="custom_dial_pad_number_nine">9</string>
    <string name="custom_dial_pad_number_zero">0</string>
    <string name="custom_dial_pad_number_double_zero">00</string>
</resources>
